--- a/_includes/themes/ots/default.html
+++ b/_includes/themes/ots/default.html
@@ -72,7 +72,7 @@
 	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/blog.css" type="text/css" />
 	
 	<!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic|Inconsolata' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic|Inconsolata' rel='stylesheet' type='text/css'>
   
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
