--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -4,7 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="{{ site.author.name }}" />
-   <link href="http://feeds.feedburner.com/{{ site.author.feedburner }}" rel="alternate" title="your title" type="application/atom+xml" />
+   <link href="https://feeds.feedburner.com/{{ site.author.feedburner }}" rel="alternate" title="your title" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/syntax.css" type="text/css" />
@@ -13,7 +13,7 @@
    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/screen.css" type="text/css" media="screen, projection" />
 
    <!-- Typekit -->
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
+   <script type="text/javascript" src="https://use.typekit.com/jpd0pfm.js"></script>
    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
@@ -35,27 +35,27 @@
     <div class="footer">
       <div class="contact">
         <p>
-        <a href="http://www.opentechschool.org/">{{ site.title }}</a><br />
+        <a href="https://www.opentechschool.org/">{{ site.title }}</a><br />
           {{ site.tagline }}<br />
           <a href='mailto:{{ site.author.email }}'>{{ site.author.email }}</a>
         </p>
       </div>
       <div class="contact">
         <p>
-          <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
-          <a href="http://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
+          <a href="https://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
+          <a href="https://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
         </p>
       </div>
       <!--<div class="rss">
-        <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
+        <a href="https://feeds.feedburner.com/{{ site.author.feedburner }}">
           <img src="{{ ASSET_PATH }}/images/rss.png" alt="Subscribe to RSS Feed" />
         </a>
       </div>-->
     </div>
   </div>
- <!-- <a href="http://github.com/{{ site.author.github }}"><img
+ <!-- <a href="https://github.com/{{ site.author.github }}"><img
    style="position: absolute; top: 0; right: 0; border: 0;"
-   src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
+   src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
    alt="Fork me on GitHub" /></a> -->
 
   {% include JB/analytics %}
